--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "bundle": "webpack",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server"
+    "start": "node server",
+    "test": "mocha"
   },
   "keywords": [],
   "author": "",
@@ -25,6 +26,7 @@
     "babel-preset-es2015": "^6.3.13",
     "babel-preset-react": "^6.3.13",
     "babel-preset-stage-0": "^6.3.13",
+    "mocha": "^3.5.0",
     "react": "^0.14.6",
     "react-dom": "^0.14.6",
     "webpack": "^1.12.9",
