--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -39,7 +39,7 @@ jobs:
 
       # run tests!
       - run:            npm test
-      - run:            bash .circleci/setup-heroku.sh
+      - run:            sudo bash .circleci/setup-heroku.sh
     #   - add_ssh_keys:
     #       fingerprints:
     #         - "48:a0:87:54:ca:75:32:12:c6:9e:a2:77:a4:7a:08:a4"
