--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
   "main": "index.js",
   "scripts": {
     "bundle": "webpack",
+    "watch": "webpack --watch",
     "test": "mocha",
-    "start": "node server"
+    "start": "nodemon server"
   },
   "keywords": [],
   "author": "",
@@ -27,6 +28,7 @@
     "babel-preset-react": "^6.3.13",
     "babel-preset-stage-0": "^6.3.13",
     "mocha": "^3.5.0",
+    "nodemon": "^1.11.0",
     "react": "^0.14.6",
     "react-dom": "^0.14.6",
     "webpack": "^1.12.9",
