--- a/package.json
+++ b/package.json
@@ -13,22 +13,21 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "hapi": "^16.5.2",
-    "inert": "^4.2.1",
-    "lodash": "^4.17.4"
+    "hapi": "^17.2.0",
+    "inert": "^5.0.1"
   },
   "devDependencies": {
     "babel-core": "^6.17.0",
     "babel-loader": "^6.2.0",
     "babel-plugin-add-module-exports": "^0.1.2",
-    "babel-plugin-react-html-attrs": "^2.0.0",
+    "babel-plugin-react-html-attrs": "^2.1.0",
     "babel-plugin-transform-class-properties": "^6.3.13",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-preset-es2015": "^6.3.13",
     "babel-preset-react": "^6.3.13",
     "babel-preset-stage-0": "^6.3.13",
-    "mocha": "^3.5.0",
-    "nodemon": "^1.11.0",
+    "mocha": "^3.5.3",
+    "nodemon": "^1.14.7",
     "react": "^0.14.6",
     "react-dom": "^0.14.6",
     "webpack": "^1.12.9",
