--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "watch": "webpack --watch",
     "test": "mocha",
     "start": "nodemon server",
-    "lint": "eslint"
+    "lint": "eslint src/**/*.js"
   },
   "keywords": [],
   "author": "",
@@ -28,7 +28,7 @@
   },
   "devDependencies": {
     "babel-core": "^6.26.0",
-    "babel-eslint": "^8.1.2",
+    "babel-eslint": "^8.2.1",
     "babel-loader": "^7.1.2",
     "babel-plugin-react-html-attrs": "^2.1.0",
     "babel-plugin-transform-class-properties": "^6.3.13",
@@ -44,11 +44,11 @@
     "eslint-plugin-jsx-a11y": "^6.0.3",
     "eslint-plugin-react": "^7.5.1",
     "file-loader": "^1.1.6",
-    "mocha": "^3.5.3",
-    "nodemon": "^1.14.9",
+    "mocha": "^4.1.0",
+    "nodemon": "^1.14.10",
     "style-loader": "^0.19.1",
     "url-loader": "^0.6.2",
     "webpack": "^3.10.0",
-    "webpack-dev-server": "^2.10.0"
+    "webpack-dev-server": "^2.10.1"
   }
 }
